muc: don't drop backlog messages from former members

If the message is from a full MUC JID, then we certainly do care about
it, even if the sender isn't currently in the MUC, because it might be
scrollback from someone no longer in the room.

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=27913